sidenav  : alignment issue fixed.

--- a/src/styles/default/componentstyles/sidenav.scss
+++ b/src/styles/default/componentstyles/sidenav.scss
@@ -56,7 +56,7 @@
 }
 
 .sidenav ul li {
-  padding-left: 20px;
+  padding-left: 40px;
 }
 
 .sidenav .title{
